CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN__c.object
<CustomObject>
    <description>County Plans</description>
    <fields>
        <fullName>AF_Q1_1__c</fullName>
        <description>AF_Q1_1</description>
        <label>AF_Q1_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Q1_2__c</fullName>
        <description>AF_Q1_2</description>
        <label>AF_Q1_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_AF_Q1_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AF_Q1_3__c</fullName>
        <description>AF_Q1_3</description>
        <label>AF_Q1_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Q1_4_OTHER__c</fullName>
        <description>AF_Q1_4_OTHER</description>
        <label>AF_Q1_4_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Q1__c</fullName>
        <description>AF_Q1</description>
        <label>AF_Q1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AF_Q2__c</fullName>
        <description>AF_Q2</description>
        <label>AF_Q2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AF_Q3_1_OTHER__c</fullName>
        <description>AF_Q3_1_OTHER</description>
        <label>AF_Q3_1_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Q3__c</fullName>
        <description>AF_Q3</description>
        <label>AF_Q3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q10_1__c</fullName>
        <description>CCCAP_Q10_1</description>
        <label>CCCAP_Q10_1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q10_2__c</fullName>
        <label>CCCAP_Q10_2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q10__c</fullName>
        <description>CCCAP_Q10</description>
        <label>CCCAP_Q10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCAP_Q11_1__c</fullName>
        <description>CCCAP_Q11_1</description>
        <label>CCCAP_Q11_1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_CCCAP_Q11_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCAP_Q11__c</fullName>
        <description>CCCAP_Q11</description>
        <label>CCCAP_Q11</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCAP_Q12_OTHER__c</fullName>
        <description>CCCAP_Q12_OTHER</description>
        <label>CCCAP_Q12_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q12__c</fullName>
        <description>CCCAP_Q12</description>
        <label>CCCAP_Q12</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_CCCAP_Q12</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCAP_Q1_1_Other__c</fullName>
        <label>CCCAP_Q1_1_Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q2_1_new__c</fullName>
        <label>CCCAP_Q2_1_new</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Face-to-Face Interview</fullName>
                </value>
                <value>
                    <fullName>Orientation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCAP_Q3_OTHER__c</fullName>
        <description>CCCAP_Q3_OTHER</description>
        <label>CCCAP_Q3_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q4_OTHER__c</fullName>
        <description>CCCAP_Q4_OTHER</description>
        <label>CCCAP_Q4_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q9_2_1_OTHER__c</fullName>
        <description>CCCAP_Q9_2_1_OTHER</description>
        <label>CCCAP_Q9_2_1_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q9_3_OTHER__c</fullName>
        <description>CCCAP_Q9_3_OTHER</description>
        <label>CCCAP_Q9_3_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELG_ATS_Q1__c</fullName>
        <label>ELG_ATS_Q1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00885</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELG_ATS_Q2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ELG_ATS_Q2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q20_new__c</fullName>
        <label>ELIGIBILITY_Q20_new</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abbreviated Freeze From</fullName>
                </value>
                <value>
                    <fullName>Missing Information Letter</fullName>
                </value>
                <value>
                    <fullName>Notice of Action</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q20_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ELIGIBILITY_Q20_other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q9_1_old__c</fullName>
        <label>ELIGIBILITY_Q9_1_old</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q9_3_old__c</fullName>
        <label>ELIGIBILITY_Q9_3_old</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_ELIGIBILITY_Q9_3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCDF_Q10_OTHER__c</fullName>
        <description>CCDF_Q10_OTHER</description>
        <label>CCDF_Q10_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCDF_Q10__c</fullName>
        <description>CCDF_Q10</description>
        <label>CCDF_Q10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_CCDF_Q7</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCDF_Q11_OTHER__c</fullName>
        <description>CCDF_Q11_OTHER</description>
        <label>CCDF_Q11_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCDF_Q11__c</fullName>
        <description>CCDF_Q11</description>
        <label>CCDF_Q11</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_CCDF_Q8</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCDF_Q1_OTHER__c</fullName>
        <description>CCDF_Q1_OTHER</description>
        <label>CCDF_Q1_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCDF_Q1__c</fullName>
        <description>CCDF_Q1</description>
        <label>CCDF_Q1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_CCDF_Q1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_COUNTY_PLAN_TEMPLT__c</fullName>
        <description>County Plan Template</description>
        <label>County Plan Template Chosen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_COUNTY_PLAN_TEMPLT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>County</description>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>County Plan</relationshipLabel>
        <relationshipName>County2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS__c</fullName>
        <description>Status</description>
        <label>Status(old)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00676</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFEV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFEV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q10_1__c</fullName>
        <label>ELIGIBILITY_Q10_1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_REASON_ENROLlMENT_FREEZE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q10_2__c</fullName>
        <label>ELIGIBILITY_Q10_2</label>
        <length>900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q10_3__c</fullName>
        <label>ELIGIBILITY_Q10_3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q10_3_1__c</fullName>
        <label>ELIGIBILITY_Q10_3_1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_ELIGIBILITY_Q10_3_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q10_4_OTHER__c</fullName>
        <label>ELIGIBILITY_Q10_4_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q11__c</fullName>
        <label>ELIGIBILITY_Q11</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q11_1D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ELIGIBILITY_Q11_1D</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q10__c</fullName>
        <label>ELIGIBILITY_Q10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q8_OTHER__c</fullName>
        <label>ELIGIBILITY_Q8_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q9_2_1_OTHER__c</fullName>
        <label>ELIGIBILITY_Q9_2_1_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q9_2_1__c</fullName>
        <description>ELIGIBILITY_Q9_2_1</description>
        <label>ELIGIBILITY_Q9_2_1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_ELIGIBILITY_Q9_2_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q9_2_2__c</fullName>
        <label>ELIGIBILITY_Q9_2_2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q9_3_OTHER__c</fullName>
        <label>ELIGIBILITY_Q9_3_OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flow Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IND_COMPLT_INFO_CNTC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact Info Completed Indicator</description>
        <label>Contact Info Completed Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_COMPLT_INFO_PROVR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider Info Completed Indicator</description>
        <label>Provider Info Completed Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_COMPLT_QUESTNR_CNTY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>County Questionaire Completed Indicator</description>
        <label>County Questionaire Completed Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_COUNTY_PLAN_TEMPLT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>County Plan Template Indicator</description>
        <label>County Plan Template Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Q1_4_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q1_4_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q2_new__c</fullName>
        <label>CA_Q2_new</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Q2_10_new__c</fullName>
        <description>NOT In Use, field-data Migrated to CA_Q2_10_N__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q2_10_new</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q2_11_new__c</fullName>
        <description>NOT In Use, field-data Migrated to CA_Q2_11_County__c</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CA_Q2_11_new</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>County Plan (CA_Q2_11_new)</relationshipLabel>
        <relationshipName>County_Plan9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CA_Q2_12_new__c</fullName>
        <description>NOT In Use, field-data Migrated to CA_Q2_12_N__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q2_12_new</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q1_1__c</fullName>
        <description>CA_Q1_1</description>
        <label>CA_Q1_1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00385</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Q1_22__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT In Use, field-data Migrated to CA_Q1_22_County__c</description>
        <label>CA_Q1_22</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>County Plan (CA_Q1_22)</relationshipLabel>
        <relationshipName>County_Plan2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CA_Q1_23__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT In Use, field-data Migrated to CA_Q1_23_County__c</description>
        <label>CA_Q1_23</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>County Plan (CA_Q1_23)</relationshipLabel>
        <relationshipName>County_Plan3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTE_TMP_UNI_ACC_END_DT__c</fullName>
        <description>Temporary Universal User Access End Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Temp Universal User Access End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Q7_new__c</fullName>
        <label>PF_Q7_new</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reduced when first employed for _Months(Please specify below)</fullName>
                </value>
                <value>
                    <fullName>Written request from family.</fullName>
                </value>
                <value>
                    <fullName>Written request from Case worker.</fullName>
                </value>
                <value>
                    <fullName>Hardship Application - Application must be submitted for State review/approval.</fullName>
                </value>
                <value>
                    <fullName>Current dated utility bill (within  60 days) with past due balance.</fullName>
                </value>
                <value>
                    <fullName>Current dated unplanned expenses bill(within 60 days) such as automotive maintenance/repair, home maintenance/repair, medical bill, etc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PF_Q10_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PF_Q10_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Q10_2__c</fullName>
        <label>PF_Q10_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00391</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PF_Q10__c</fullName>
        <label>PF_Q10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PF_Q11_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PF_Q11_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Q11__c</fullName>
        <label>PF_Q11</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PF_Q1__c</fullName>
        <description>PF_Q1</description>
        <label>PF_Q1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELIGIBILITY_Q12__c</fullName>
        <label>ELIGIBILITY_Q12</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Q10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q10</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q11_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q11_1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q11_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q11_2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q11_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q11_3</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q11__c</fullName>
        <label>PI_Q11</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00879</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Q12__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q12</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q23_FN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q23_FN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q23_LN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q23_LN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q24_FN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q24_FN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q24_LN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q24_LN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q25_BO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q25_BO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q25_EL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q25_EL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q25_FN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q25_FN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q25_LN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q25_LN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q3_new__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_new</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q3_1_new__c</fullName>
        <label>PI_Q3_1_new</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00889</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Q3_1_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_1_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q4_1_new__c</fullName>
        <label>PI_Q4_1_new</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00890</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Q4_1_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q4_1_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q5_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q5_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q10_new__c</fullName>
        <label>PI_Q10_new</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00894</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Q10_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q10_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q3_1_BO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_1_BO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q3_1_EL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_1_EL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q3_2_BO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_2_BO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q3_2_EL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_2_EL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q3_BO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_BO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q3_BOFN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_BOFN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q3_BOLN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_BOLN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q3_ET__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q3_ET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q4_ET__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q4_ET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q4_BO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q4_BO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q4_1_BO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q4_1_BO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q4_1_EL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q4_1_EL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q4_BOFN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q4_BOFN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q4_BOLN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q4_BOLN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Q11_1_new__c</fullName>
        <label>PI_Q11_1_new</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00895</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Q11_1_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q11_1_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PI_Q13_new__c</fullName>
        <label>PI_Q13_new</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00896</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Q13_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI_Q13_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q1_new__c</fullName>
        <label>RBRP_Q1_new</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00897</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RBRP_Q1_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q1_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q1_1_new__c</fullName>
        <label>RBRP_Q1_1_new</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Physical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RBRP_Q1_2_new__c</fullName>
        <label>RBRP_Q1_2_new</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Offsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RBRP_Q1_2_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q1_2_other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q2_1__c</fullName>
        <label>RBRP_Q2_1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RBRP_Q2_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q2_2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q1_1D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q1_1D</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q1_1__c</fullName>
        <label>RBRP_Q1_1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00874</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RBRP_Q1_21A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RBRP_Q1_21A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RBRP_Q1_22A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RBRP_Q1_22A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RBRP_Q1__c</fullName>
        <label>RBRP_Q1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00873</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RBRP_Q2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RBRP_Q2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RBRP_Q3_1_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q3_1_1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q3_1_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q3_1_2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q3_1_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q3_1_3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q3_2_1D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q3_2_1D</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q3_2_2D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q3_2_2D</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RBRP_Q3_2_3D__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RBRP_Q3_2_3D</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>County_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County Plan</label>
        <referenceTo>T_COUNTY_PLAN__c</referenceTo>
        <relationshipLabel>County Plan</relationshipLabel>
        <relationshipName>CP_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Conditionally_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Conditionally Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>this is a representation of Status in the event of being conditionally approved by the approver</description>
        <formula>IF(
            AND(
            ISPICKVAL(CDE_STATUS__c, &apos;APV&apos;),
            Is_Conditionally_Approved__c
            ),
            &apos;Conditionally Approved&apos;,
            CASE(
            TEXT(CDE_STATUS__c),
            &apos;PEN&apos;, &apos;Draft&apos;,
            &apos;SUB&apos;, &apos;Submitted&apos;,
            &apos;NRV&apos;, &apos;Need Revision&apos;,
            &apos;APV&apos;, &apos;Approved&apos;,
            &apos;&apos;
            )
            )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
</CustomObject>